# napari-cli-test

./: LICENSE  README.md  pyproject.toml  tox.ini
docs/: human_mitosis.tif  npe2_scrapper.ipynb  test.ipynb  test_custom_types.ipynb  test_npe2_scrapping.ipynb
src/napari_cli_test/: __init__.py  function.py  main.py  napari.yaml
src/napari_cli_test/_tests/: test_main.py
